--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ input[type=text],
 input[type=text]:focus {
   color: #fff;
   border: none;
-  background: rgba(0,0,0,0.2);
+  background: rgba(0,0,0,0.5);
   max-width: 400px;
 }
 
 .todos-container li {
-  background: #484E53;
+  color: #323232;
+  background: #f2f2f2;
 }
 
 .delete {
